--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="https://www.oracle.com/corporate/careers/" target="_blank">Oracle Careers</a></li>
             <li><a href="https://www.flipkartcareers.com" target="_blank">Flipkart Careers</a></li>
             <li><a href="https://careers.walmart.com" target="_blank">Walmart Careers</a></li>
-            <li><a href="https://careers.jpmorgan.com/global/en/home" target="_blank">JP Morgan & Chase Careers</a></li>
+            <li><a href="https://jpmc.fa.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX_1001" target="_blank">JP Morgan & Chase Careers</a></li>
             <li><a href="https://careers.zeta.tech" target="_blank">Zeta Careers</a></li>
             <li><a href="https://www.amazon.jobs/en/" target="_blank">Amazon Careers</a></li>
             <li><a href="https://www.gojek.io/careers" target="_blank">GoJek Careers</a></li>
